email change index.html

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ Formattting & Stylization for Website: https://tamalsen.dev/
             <div class="grid grid-cols-2 grid-rows-1 pl-20">
                 <div class="pt-10 pl-5">
                     <h3 class="uppercase font-semibold">let's connect</h3>
-                    <p class="font-light">imaandadabhoy@icloud.com</p>
+                    <p class="font-light">imaandadabhoy@gmail.com</p>
 
                 </div>
 
