added the new project index.html

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@ Formattting & Stylization for Website: https://tamalsen.dev/
                 <h1 class="uppercase text-2xl font-bold px-10 tracking-wide text-center pb-20">spotlight projects</h1>
                 <!-- cards --> 
                 <div class="cards">
+                    <!-- card zero-->
+                        <div class="card">
+                         <iframe class="card_img rounded-t-lg" src="https://codehs.com/uploads/d5b35932dc5e1ddbdf9942d2eb880bc1"></iframe>
+                        <div class="card_content rounded-b-lg">
+                            <p class="pl-5 pt-5 pb-2 pr-5 font-semibold">Website Team Design Competition (2024)</p>
+                            <p class="pl-5 pb-5 pr-5">Placed 1st at Regionals, State (competing at Nationals in May); Created a website for a restaurant. See <a href="https://gamedaygrillbpa.github.io/">the website here.</a></p>
+                           <!-- <button class="modalBtn pb-2 pl-5"><i class="fa-solid fa-circle-plus fa-lg" style="color: #ffffff;"></i></button>
+                   -->  </div>
+                    </div>
                     <!-- card one -->
                     <div class="card">
                         <iframe class="card_img rounded-t-lg" src="https://codehs.com/uploads/a3dbe6b4c186bc56b88034897d911544"></iframe>
@@ -150,11 +159,11 @@ Formattting & Stylization for Website: https://tamalsen.dev/
                     </div>
             
                     <div class=" pb-5 hidden" id="activities">
-                        <h4 class="text-base font-semibold uppercase pl-20 pt-5">//Business Professionals of America (BPA) 2022 - Current  </h4>
+                        <h4 class="text-base font-semibold uppercase pl-20 pt-5">// Business Professionals of America (BPA) 2022 - Current  </h4>
                         <ul class="pl-20 pt-5 font-light">
                             <li class="font-semibold">Member of BPA - 2023-2024 </li>
                             <ul>
-                                <li>Participating in the following competitions: Virtual Branding Team, Computer Programming Concepts, & Fundamentals of Web Design. </li>
+                                <li>Participating in the following competitions: Website Design Team (1st at State) & Fundamentals of Web Design (15th at State). </li>
                             </ul>
                             <li class="font-semibold">Vice President of BPA 2022-2023 (Assigned)</li>
                             <ul>
@@ -162,13 +171,9 @@ Formattting & Stylization for Website: https://tamalsen.dev/
                             </ul>
                         </ul>
                         <h4 class="text-base font-semibold uppercase pl-20 pt-5">// Taekwondo 2022 - Current </h4>
-                        <p class="pl-20 pt-5 font-light">Awarded 3x Best Form during Belt Testing.</p>
+                        <p class="pl-20 pt-5 font-light">Placed Gold in Sparring and Silver in Poomsae at the White Tiger Taekwondo Competition.</p>
                          <h4 class="text-base font-semibold uppercase pl-20 pt-5">// Go Baby Go Program 2021</h4>
                         <p class="text-base font-light pl-20 pt-5">In her freshmen year, Imaan participated in the Go Baby Go Mobility Program. Imaan was the Graphic Design Lead, creating a multimedia presentation displaying the project, and assisted with the modifications of the car.</p>
-                        <h4 class="text-base font-semibold uppercase pl-20 pt-5">// Society of Women Engineers (SWE) 2022 - 2023</h4>
-                        <p class="pl-20 pt-5 font-light">Member of SWE - participated in weekly activities designed to encourage interest in engineering. </p>
-                        <h4 class="text-base font-semibold uppercase pl-20 pt-5">// Battle of the Books 2022 - Current </h4>
-                        <p class="pl-20 pt-5 font-light">Team placed 2nd at the local annual Battle of the Books competition (2023)</p>
                         <h4 class="text-base font-semibold uppercase pl-20 pt-5">// Karate 2016 - 2021</h4>
                         <p class="pl-20 pt-5 font-light"></p>
                     </div>
@@ -211,6 +216,7 @@ Formattting & Stylization for Website: https://tamalsen.dev/
             <div class="grid grid-cols-2 grid-rows-1 pl-20">
                 <div class="pt-10 pl-5">
                     <h3 class="uppercase font-semibold">let's connect</h3>
+                    
                     <p class="font-light">imaandadabhoy@gmail.com</p>
 
                 </div>
