--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Formattting & Stylization for Website: https://tamalsen.dev/
             <div id="abtMe" class="aboutMe rounded-lg bg-zinc-800 backgroundCard px-5">
                 <h1 class="uppercase text-2xl font-bold px-10 pt-5 pb-5 tracking-wide text-center">about me</h1>
                 <pre class="uppercase text-cente pb-2">communication . dedication . collaboration</pre>
-                <p class="pb-5">I am senior at the Liberal Arts & Science Academy. I have lived in Houston, Seattle & Austin. I love reading, so feel free to reach out with book recs. I plan to pursue Mechanical Engineering in university. And remember, if there is a project/opportunity you think I would be perfect for, please reach out!</p>
+                <p class="pb-5">I am a freshman at the University of Houston. I have lived in Houston, Seattle & Austin. I love reading, so feel free to reach out with book recs. I plan to pursue Mechanical Engineering in university. And remember, if there is a project/opportunity you think I would be perfect for, please reach out!</p>
             </div>
 
             <!-- projects --> 
